--- a/index.html
+++ b/index.html
@@ -133,11 +133,6 @@
                         <div class="mega-category-menu">
                             <span class="cat-button"><i class="lni lni-menu"></i>Categorias</span>
                             <ul class="sub-category">
-                                <li><a href="product-grids.html">Portatiles</a></li>
-                                <li><a href="product-grids.html">Celulares</a></li>
-                                <li><a href="product-grids.html">Relojes</a></li>
-                                <li><a href="product-grids.html">Auriculares</a></li>
-                                <li><a href="product-grids.html">Monitores</a></li>
                             </ul>
                         </div>
                         <!-- End Mega Category Menu -->
@@ -268,262 +263,15 @@
                 <div class="col-12">
                     <div class="section-title">
                         <h2>Productos En Tendencia</h2>
-                        <p>¿Buscas algo nuevo y emocionante? ¡Nuestra sección de Productos en Tendencia es el lugar perfecto para ti! Aquí encontrarás lo más destacado del momento, desde artículos innovadores hasta los favoritos de nuestros clientes.</p>
+                        <p>¿Buscas algo nuevo y emocionante? ¡Nuestra sección de Productos en Tendencia es el lugar perfecto
+                            para ti! Aquí encontrarás lo más destacado del momento, desde artículos innovadores hasta los
+                            favoritos de nuestros clientes.</p>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="product-image">
-                            <img src="/images/products/producto-1.png">
-                            <div onclick="validarIdProducto(1)" class="button">
-                                <a href="/html/product-details.html" class="btn"><i class="lni lni-cart"></i>Ver Mas</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Watches</span>
-                            <h4 class="title">
-                                <a href="product-grids.html">Xiaomi Mi Band 5</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star"></i></li>
-                                <li><span>4.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$199.00</span>
-                            </div>
-                        </div>
-                        <button onclick="addToCartFromStore(1)" class="btn btn-primary">Add To Cart</button>
-                        <div class="added-to-cart1"></div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="product-image">
-                            <img src="/images/products/producto-2.jpg" style="width: 160px;">
-                            <div onclick="validarIdProducto(2)" class="button">
-                                <a href="/html/product-details.html" class="btn"><i class="lni lni-cart"></i>Ver Mas</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Speaker</span>
-                            <h4 class="title">
-                                <a href="product-grids.html">Big Power Sound Speaker</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><span>5.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$275.00</span>
-                                <span class="discount-price">$300.00</span>
-                            </div>
-                        </div>
-                        <button onclick="addToCartFromStore(2)" class="btn btn-primary">Add To Cart</button>
-                        <div class="added-to-cart2"></div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="product-image">
-                            <img src="/images/products/producto-3.png">
-                            <div onclick="validarIdProducto(3)" class="button">
-                                <a href="/html/product-details.html" class="btn"><i class="lni lni-cart"></i>Ver Mas</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Camera</span>
-                            <h4 class="title">
-                                <a href="product-grids.html">WiFi Security Camera</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><span>5.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$399.00</span>
-                            </div>
-                        </div>
-                        <button onclick="addToCartFromStore(3)" class="btn btn-primary">Add To Cart</button>
-                        <div class="added-to-cart3"></div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="product-image">
-                            <img src="/images/products/producto-4.png">
-                            <div onclick="validarIdProducto(4)" class="button">
-                                <a href="/html/product-details.html" class="btn"><i class="lni lni-cart"></i>Ver Mas</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Phones</span>
-                            <h4 class="title">
-                                <a href="product-grids.html">iphone 6x plus</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><span>5.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$400.00</span>
-                            </div>
-                        </div>
-                        <button onclick="addToCartFromStore(4)" class="btn btn-primary">Add To Cart</button>
-                        <div class="added-to-cart4"></div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="product-image">
-                            <img src="/images/products/producto-5.png">
-                            <div onclick="validarIdProducto(5)" class="button">
-                                <a href="/html/product-details.html" class="btn"><i class="lni lni-cart"></i>Ver Mas</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Headphones</span>
-                            <h4 class="title">
-                                <a href="product-grids.html">Wireless Headphones</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><span>5.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$350.00</span>
-                            </div>
-                        </div>
-                        <button onclick="addToCartFromStore(5)" class="btn btn-primary">Add To Cart</button>
-                        <div class="added-to-cart5"></div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="product-image">
-                            <img src="/images/products/producto-6.png">
-                            <div onclick="validarIdProducto(6)" class="button">
-                                <a href="/html/product-details.html" class="btn"><i class="lni lni-cart"></i>Ver Mas</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Speaker</span>
-                            <h4 class="title">
-                                <a href="product-grids.html">Mini Bluetooth Speaker</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star"></i></li>
-                                <li><span>4.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$70.00</span>
-                            </div>
-                        </div>
-                        <button onclick="addToCartFromStore(6)" class="btn btn-primary">Add To Cart</button>
-                        <div class="added-to-cart6"></div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="product-image">
-                            <img src="/images/products/producto-7.png">
-                            <div onclick="validarIdProducto(7)" class="button">
-                                <a href="/html/product-details.html" class="btn"><i class="lni lni-cart"></i>Ver Mas</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Headphones</span>
-                            <h4 class="title">
-                                <a href="product-grids.html">PX7 Wireless Headphones</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star"></i></li>
-                                <li><span>4.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$100.00</span>
-                                <span class="discount-price">$200.00</span>
-                            </div>
-                        </div>
-                        <button onclick="addToCartFromStore(7)" class="btn btn-primary">Add To Cart</button>
-                        <div class="added-to-cart7"></div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="product-image">
-                            <img src="/images/products/producto-8.png">
-                            <div onclick="validarIdProducto(8)" class="button">
-                                <a href="/html/product-details.html" class="btn"><i class="lni lni-cart"></i>Ver Mas</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Laptop</span>
-                            <h4 class="title">
-                                <a href="product-grids.html">Apple MacBook Air</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><span>5.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$899.00</span>
-                            </div>
-                        </div>
-                        <button onclick="addToCartFromStore(8)" class="btn btn-primary">Add To Cart</button>
-                        <div class="added-to-cart8"></div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
+            <div class="row products-container">
             </div>
+        </div>
         </div>
     </section>
     <!-- End Trending Product Area -->
@@ -711,6 +459,7 @@
     <script src="/js/main.js"></script>
     <script src="/js/validar-sesion.js"></script>
     <script src="/js/añadir-carrito.js"></script>
+    <script src="/js/traer-inventario.js"></script>
 </body>
 
 </html>
