--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -271,7 +271,7 @@
                             <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#"
                                 data-bs-toggle="dropdown">
                                 <img src="../images/avatar/avatar-dash.jpg" class="avatar img-fluid rounded me-1"
-                                    alt="Charles Hall" /> <span class="text-dark">Gerson</span>
+                                    alt="Gerson" /> <span class="text-dark">Gerson</span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-end">
                                 <a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1"
