depurando detalles de la tienda, pagina about us añadida

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                                 <li>
                                     <div class="select-position">
                                         <select id="select5">
-                                            <option value="0" selected>English</option>
-                                            <option value="1">Español</option>
+                                            <option value="0" selected>Español</option>
                                         </select>
                                     </div>
                                 </li>
@@ -51,9 +50,7 @@
                         <div class="top-middle">
                             <ul class="useful-links">
                             <li><a href="index.html">Hogar</a></li>
-                                <li><a href="about-us.html">Sobre Nosotros</a></li>
-                                <li><a href="contact.html">Contactanos</a></li>
-                                <li><a href="html/asistente.html">Asistente</a></li>
+                                <li><a href="html/sobreNosotros.html">Sobre Nosotros</a></li>
                             </ul>
                         </div>
                     </div>
@@ -62,12 +59,6 @@
                             <div class="user">
                             </div>
                             <ul class="user-login">
-                                <li>
-                                    <a href="login.html">Sign In</a>
-                                </li>
-                                <li>
-                                    <a href="register.html">Register</a>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -163,9 +154,6 @@
                             <li>
                                 <a href="javascript:void(0)"><i class="lni lni-instagram"></i></a>
                             </li>
-                            <li>
-                                <a href="javascript:void(0)"><i class="lni lni-skype"></i></a>
-                            </li>
                         </ul>
                     </div>
                     <!-- End Nav Social -->
@@ -194,9 +182,6 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                         incididunt ut labore et dolore magna aliqua.</p>
                                     <h3><span>Now Only</span> $320.99</h3>
-                                    <div class="button">
-                                        <a href="product-grids.html" class="btn">Shop Now</a>
-                                    </div>
                                 </div>
                             </div>
                             <!-- End Single Slider -->
@@ -210,9 +195,6 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                         incididunt ut labore et dolore magna aliqua.</p>
                                     <h3><span>Combo Only:</span> $590.00</h3>
-                                    <div class="button">
-                                        <a href="product-grids.html" class="btn">Shop Now</a>
-                                    </div>
                                 </div>
                             </div>
                             <!-- End Single Slider -->
@@ -242,9 +224,6 @@
                                 <div class="content">
                                     <h2>Weekly Sale!</h2>
                                     <p>Saving up to 50% off all online store items this week.</p>
-                                    <div class="button">
-                                        <a class="btn" href="product-grids.html">Shop Now</a>
-                                    </div>
                                 </div>
                             </div>
                             <!-- Start Small Banner -->
@@ -288,9 +267,6 @@
                         <div class="content">
                             <h2>Smart Watch 2.0</h2>
                             <p>Space Gray Aluminum Case with <br>Black/Volt Real Sport Band </p>
-                            <div class="button">
-                                <a href="product-grids.html" class="btn">View Details</a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -301,9 +277,6 @@
                             <h2>Smart Headphone</h2>
                             <p>Lorem ipsum dolor sit amet, <br>eiusmod tempor
                                 incididunt ut labore.</p>
-                            <div class="button">
-                                <a href="product-grids.html" class="btn">Shop Now</a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -322,8 +295,8 @@
                         <i class="lni lni-delivery"></i>
                     </div>
                     <div class="media-body">
-                        <h5>Free Shipping</h5>
-                        <span>On order over $99</span>
+                        <h5>Entrega Segura.</h5>
+                        <span>Pagos Contra Entrega Incluidos.</span>
                     </div>
                 </li>
                 <!-- Money Return -->
@@ -332,8 +305,8 @@
                         <i class="lni lni-support"></i>
                     </div>
                     <div class="media-body">
-                        <h5>24/7 Support.</h5>
-                        <span>Live Chat Or Call.</span>
+                        <h5>soporte 24/7 por nuestra IA.</h5>
+                        <span>chat en vivo.</span>
                     </div>
                 </li>
                 <!-- Support 24/7 -->
@@ -342,8 +315,8 @@
                         <i class="lni lni-credit-cards"></i>
                     </div>
                     <div class="media-body">
-                        <h5>Online Payment.</h5>
-                        <span>Secure Payment Services.</span>
+                        <h5>Pago En Linea.</h5>
+                        <span>Servivio De Pago Seguro.</span>
                     </div>
                 </li>
                 <!-- Safe Payment -->
@@ -352,8 +325,8 @@
                         <i class="lni lni-reload"></i>
                     </div>
                     <div class="media-body">
-                        <h5>Easy Return.</h5>
-                        <span>Hassle Free Shopping.</span>
+                        <h5>Facil Devolucion.</h5>
+                        <span>Evita Molestias Con Devoluciones.</span>
                     </div>
                 </li>
             </ul>
@@ -375,9 +348,7 @@
                             <div class="single-footer f-contact">
                                 <h3>Contactanos</h3>
                                 <p class="phone">Telefono: +57 314 781 0003</p>
-                                <p class="mail">
-                                    <a href="jbaleta@unibarranquilla.edu.co">jbaleta@unibarranquilla.edu.co</a>
-                                </p>
+                                <p class="phone">jbaleta@unibarranquilla.edu.co</p>
                             </div>
                             <!-- End Single Widget -->
                         </div>
@@ -387,24 +358,13 @@
                             <div class="single-footer f-link">
                                 <h3>Informacion</h3>
                                 <ul>
-                                    <li><a href="about-us.html">Sobre Nosotros</a></li>
-                                    <li><a href="contact.html">Contactanos</a></li>
+                                    <li><a href="html/sobreNosotros.html">Sobre Nosotros</a></li>
                                 </ul>
                             </div>
                             <!-- End Single Widget -->
                         </div>
                         <div class="col-lg-3 col-md-6 col-12">
                             <!-- Single Widget -->
-                            <div class="single-footer f-link">
-                                <h3>Categorias Populares</h3>
-                                <ul>
-                                    <li><a href="product-grids.html">Portatiles</a></li>
-                                    <li><a href="product-grids.html">Celulares</a></li>
-                                    <li><a href="product-grids.html">Relojes</a></li>
-                                    <li><a href="product-grids.html">Auriculares</a></li>
-                                    <li><a href="product-grids.html">Monitores</a></li>
-                                </ul>
-                            </div>
                             <!-- End Single Widget -->
                         </div>
                     </div>
@@ -436,7 +396,6 @@
                                 <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-instagram"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-google"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -461,5 +420,4 @@
     <script src="/js/añadir-carrito.js"></script>
     <script src="/js/traer-inventario.js"></script>
 </body>
-
 </html>
