--- a/html/product-details.html
+++ b/html/product-details.html
@@ -41,8 +41,7 @@
                                 <li>
                                     <div class="select-position">
                                         <select id="select5">
-                                            <option value="0" selected>English</option>
-                                            <option value="1">Español</option>
+                                            <option value="0" selected>Español</option>
                                         </select>
                                     </div>
                                 </li>
@@ -52,25 +51,16 @@
                     <div class="col-lg-4 col-md-4 col-12">
                         <div class="top-middle">
                             <ul class="useful-links">
-                                <li><a href="index.html">Hogar</a></li>
-                                <li><a href="about-us.html">Sobre Nosotros</a></li>
-                                <li><a href="contact.html">Contactanos</a></li>
-                                <li><a href="html/asistente.html">Asistente</a></li>
+                            <li><a href="../index.html">Hogar</a></li>
+                                <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-12">
                         <div class="top-end">
                             <div class="user">
-                                hola!
                             </div>
                             <ul class="user-login">
-                                <li>
-                                    <a href="login.html">Sign In</a>
-                                </li>
-                                <li>
-                                    <a href="register.html">Register</a>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -84,7 +74,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-3 col-7">
                         <!-- Start Header Logo -->
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="/index.html">
                             <h2>TechShop</h2>
                         </a>
                         <!-- End Header Logo -->
@@ -95,10 +85,10 @@
                             <!-- navbar search start -->
                             <div class="navbar-search search-style-5">
                                 <div class="search-input">
-                                    <input type="text" placeholder="Search">
+                                    <input class="search" type="text" placeholder="Search">
                                 </div>
                                 <div class="search-btn">
-                                    <button><i class="lni lni-search-alt"></i></button>
+                                    <button onclick="guardarBusqueda()"><i class="lni lni-search-alt"></i></button>
                                 </div>
                             </div>
                             <!-- navbar search Ends -->
@@ -133,16 +123,6 @@
                 <div class="col-lg-8 col-md-6 col-12">
                     <div class="nav-inner">
                         <!-- Start Mega Category Menu -->
-                        <div class="mega-category-menu">
-                            <span class="cat-button"><i class="lni lni-menu"></i>Categorias</span>
-                            <ul class="sub-category">
-                                <li><a href="product-grids.html">Portatiles</a></li>
-                                <li><a href="product-grids.html">Celulares</a></li>
-                                <li><a href="product-grids.html">Relojes</a></li>
-                                <li><a href="product-grids.html">Auriculares</a></li>
-                                <li><a href="product-grids.html">Monitores</a></li>
-                            </ul>
-                        </div>
                         <!-- End Mega Category Menu -->
                         <!-- Start Navbar -->
                         <nav class="navbar navbar-expand-lg">
@@ -171,9 +151,6 @@
                             <li>
                                 <a href="javascript:void(0)"><i class="lni lni-instagram"></i></a>
                             </li>
-                            <li>
-                                <a href="javascript:void(0)"><i class="lni lni-skype"></i></a>
-                            </li>
                         </ul>
                     </div>
                     <!-- End Nav Social -->
@@ -185,24 +162,6 @@
     <!-- End Header Area -->
 
     <!-- Start Breadcrumbs -->
-    <div class="breadcrumbs">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="breadcrumbs-content">
-                        <h1 class="page-title">Single Product</h1>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-12">
-                    <ul class="breadcrumb-nav">
-                        <li><a href="index.html"><i class="lni lni-home"></i> Home</a></li>
-                        <li><a href="index.html">Shop</a></li>
-                        <li>Single Product</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- End Breadcrumbs -->
 
     <!-- Start Item Details -->
@@ -280,9 +239,7 @@
                             <div class="single-footer f-contact">
                                 <h3>Contactanos</h3>
                                 <p class="phone">Telefono: +57 314 781 0003</p>
-                                <p class="mail">
-                                    <a href="jbaleta@unibarranquilla.edu.co">jbaleta@unibarranquilla.edu.co</a>
-                                </p>
+                                <p class="phone">jbaleta@unibarranquilla.edu.co</p>
                             </div>
                             <!-- End Single Widget -->
                         </div>
@@ -292,24 +249,13 @@
                             <div class="single-footer f-link">
                                 <h3>Informacion</h3>
                                 <ul>
-                                    <li><a href="about-us.html">Sobre Nosotros</a></li>
-                                    <li><a href="contact.html">Contactanos</a></li>
+                                    <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
                                 </ul>
                             </div>
                             <!-- End Single Widget -->
                         </div>
                         <div class="col-lg-3 col-md-6 col-12">
                             <!-- Single Widget -->
-                            <div class="single-footer f-link">
-                                <h3>Categorias Populares</h3>
-                                <ul>
-                                    <li><a href="product-grids.html">Portatiles</a></li>
-                                    <li><a href="product-grids.html">Celulares</a></li>
-                                    <li><a href="product-grids.html">Relojes</a></li>
-                                    <li><a href="product-grids.html">Auriculares</a></li>
-                                    <li><a href="product-grids.html">Monitores</a></li>
-                                </ul>
-                            </div>
                             <!-- End Single Widget -->
                         </div>
                     </div>
@@ -341,7 +287,6 @@
                                 <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-instagram"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-google"></i></a></li>
                             </ul>
                         </div>
                     </div>
